--- a/app_flask/app.conf
+++ b/app_flask/app.conf
@@ -1,2 +1,7 @@
 SQLALCHEMY_DATABASE_URI = 'mysql+pymysql://root:123456@localhost:3306/db'
 SQLALCHEMY_TRACK_MODIFICATIONS = True
+QINIU_ACCESS_KEY='yfLzLjreN3mQtup4GdnzbY7H3Ej8UIMMIOoTtUXl'
+QINIU_SERECT_KEY='29Cnd-dycTS6leFLVHTLVp7WV_ccFHThfb4oGRP9'
+QINIU_BUCKET_NAME='pythonflask'
+QINIU_DOMAIN_PREFIX='oexmqp3zq.bkt.clouddn.com'
+ALLOWED_EXT=set(['png','jpg','jpeg','pdf','txt','gif'])
