--- a/app_flask/app.conf
+++ b/app_flask/app.conf
@@ -3,5 +3,6 @@ SQLALCHEMY_TRACK_MODIFICATIONS = True
 QINIU_ACCESS_KEY='yfLzLjreN3mQtup4GdnzbY7H3Ej8UIMMIOoTtUXl'
 QINIU_SERECT_KEY='29Cnd-dycTS6leFLVHTLVp7WV_ccFHThfb4oGRP9'
 QINIU_BUCKET_NAME='pythonflask'
-QINIU_DOMAIN_PREFIX='oexmqp3zq.bkt.clouddn.com'
+QINIU_DOMAIN_PREFIX='http://oeytwu508.bkt.clouddn.com/'
+UPLOAD_DIR='D:/User/image_repo'
 ALLOWED_EXT=set(['png','jpg','jpeg','pdf','txt','gif'])
